--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,6 +61,12 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/
+    - assets/icons/filter.png
+    - assets/icons/nasi-icon.png
+    - assets/icons/noodles-icon.png
+    - assets/icons/kottu-icon.png
+    - assets/icons/biryani-icon.png
+    - assets/icons/pizza-icon.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
